# eggserve

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit.toml  deny.toml
architecture/: adr-002-windows-handle-relative-filesystem.md  adr-003-custom-service-ownership.md  client.md  configuration.md  eggserve-bin.md  eggserve-core.md  eggserve-python.md  filesystem-confinement.md  overview.md  path-confinement.md  policy-system.md  primitives-api.md  release-infrastructure.md  response-planning.md  runtime.md  security-model.md  structured-logging.md  testing-and-conformance.md
conformance/: body_corpus.json  corpus.json
crates/eggserve-bin/: Cargo.toml
crates/eggserve-bin/src/: args.rs  lib.rs  main.rs  shutdown.rs  tls.rs
crates/eggserve-bin/tests/: cli_validation.rs  production_path.rs  tls_abuse.rs
crates/eggserve-core/: Cargo.toml
crates/eggserve-core/benches/: canonical_types.rs  file_serving.rs
crates/eggserve-core/examples/: rust_primitives.rs  server_embedding.rs
crates/eggserve-core/src/: config.rs  error.rs  lib.rs  limits.rs  mime.rs  ops.rs  path.rs  policy.rs  response.rs  service.rs  telemetry.rs
crates/eggserve-core/src/fs/: mod.rs  unix.rs  windows.rs
crates/eggserve-core/src/path/: components.rs  decode.rs  mod.rs  platform.rs  policy.rs  rejected.rs  request_target.rs
crates/eggserve-core/src/primitives/: body.rs  canonical.rs  connection_info.rs  header_block.rs  http.rs  incomplete_body_policy.rs  method.rs  mod.rs  planner.rs  request.rs  request_body.rs  request_body_error.rs  request_body_policy.rs  request_head.rs  request_target.rs  response.rs  secure_root.rs  version.rs
crates/eggserve-core/src/primitives/client/: error.rs  http_client.rs  mod.rs  request.rs  response.rs  url.rs
crates/eggserve-core/src/server/: config.rs  connection.rs  errors.rs  handle.rs  lifecycle.rs  mod.rs  service.rs  static_service.rs
crates/eggserve-core/tests/: api_stability.rs  body_conformance.rs  body_primitives.rs  body_properties.proptest-regressions  body_properties.rs  canonical_conformance.rs  canonical_wire_interop.rs  client_integration.rs  client_interop.rs  client_tls.rs  corpus_replay.rs  fault_injection.rs  filesystem_race_qualification.rs  http_primitives_integration.rs  http_wire_correctness.rs  integration.rs  lifecycle_integration.rs  no_hyper_in_public_api.rs  ops_integration.rs  public_api_consumers.rs  request_body_cancellation.rs  request_body_integration.rs  request_body_timeout_interaction.rs  request_body_tls.rs  request_body_wire.rs  server_integration.rs  stateful_fuzz_replay.rs  streaming_buffer_qualification.rs  tls_service_parity.rs  windows_feasibility.rs  windows_plan084.rs  windows_plan086.rs
crates/eggserve-python/: Cargo.toml  README.md  pyproject.toml
crates/eggserve-python/packaging-tests/: run_all.sh  test_body_smoke.py  test_cli_smoke.py  test_client_smoke.py  test_imports.py  test_lifecycle_smoke.py  test_server_smoke.py
crates/eggserve-python/python/eggserve/: __init__.py  __init__.pyi  __main__.py  _bin.py  _native.pyi  server.py  test_api_consumers.py  test_api_stability.py  test_body_conformance.py  test_body_primitives.py  test_body_wire.py  test_boundary_hardening.py  test_canonical_conformance.py  test_canonical_request_types.py  test_client_primitives.py  test_parity_matrix.py  test_primitives.py  test_server.py  test_server_integration.py  test_server_primitives.py
crates/eggserve-python/src/: client.rs  lib.rs  main.rs  server.rs
docs/: action-pinning.md  api-stability.md  architecture.md  cli.md  (+31 more)
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_content_length_reconciliation/: 02_200_te_cl  03_200_te_head  04_204_cl
fuzz/corpus/fuzz_directory_buffer/: dot_dotdot  dotfile  multi_entries  reparse  single_dir  single_file
fuzz/corpus/fuzz_header_block/: 05_varied
fuzz/corpus/fuzz_header_name/: 02_custom  05_emptyish  07_duplicate
fuzz/corpus/fuzz_method/: 06_purge
fuzz/corpus/fuzz_normalize_response/: 01_get_200  02_head_200  03_204  04_transfer_encoding  05_head_404
fuzz/corpus/fuzz_request_body/: binary_data  chunked_complete  chunked_incomplete  cl_te_conflict  exact_limit_10  http10_post  malformed_chunk_size  many_tiny_chunks  one_over_limit  premature_eof  zero_content_length
fuzz/corpus/fuzz_request_head/: 03_post_headers  05_delete
fuzz/corpus/fuzz_response_builder/: 01_200_2headers  02_404_noheader  04_200_4headers  05_204_1header
fuzz/corpus/if_none_match/: list_match  list_no_match  not_matching  strong_match_weak  weak_match_strong
fuzz/corpus/path_components/: ads  backslash  dot_component  double_encoded_dotdot  drive_prefix  encoded_dot  traversal
fuzz/corpus/percent_decode/: double_encode  invalid_utf8  malformed  special_chars  truncated
fuzz/corpus/platform_component/: ads  aux_txt  cc_colon  con_dot  con_dotdot  con_log  drive_z  not_reserved  slash_c
fuzz/corpus/range_header/: bytes_0_49  bytes_open  bytes_suffix  clamped  empty  first_byte  inverted  multiple  no_prefix  non_numeric  not_bytes  start_beyond  start_equals_end_beyond  suffix_large  suffix_one  suffix_zero
fuzz/corpus/request_target/: absolute_form  double_encoded  empty_component  encoded_backslash  encoded_traversal  malformed_percent  nul_byte  percent_encoded  query_stripped  unicode_path  windows_drive
fuzz/corpus/url_parse/: control_char  empty_host  fragment_stripped  ftp  idn  invalid_port  ipv6  ipv6_extra  ipv6_no_port  negative_port  percent_encoded  query  query_without_slash  space  tab  unclosed_ipv6  userinfo
fuzz/corpus/validate_request_target/: newline  tab  whitespace
fuzz/fuzz_targets/: fuzz_content_length_reconciliation.rs  fuzz_directory_buffer.rs  fuzz_header_block.rs  fuzz_header_name.rs  fuzz_header_value.rs  fuzz_method.rs  fuzz_normalize_response.rs  fuzz_request_body.rs  fuzz_request_head.rs  fuzz_response_builder.rs  fuzz_status_code.rs  if_none_match.rs  path_components.rs  percent_decode.rs  platform_component.rs  range_header.rs  request_target.rs  url_parse.rs  validate_method.rs  validate_request_target.rs
(+138 files in other folders)
