[workspace]

[package]
name = "eggserve-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.eggserve-core]
path = "../crates/eggserve-core"

[[bin]]
name = "request_target"
path = "fuzz_targets/request_target.rs"
test = false
doc = false

[[bin]]
name = "percent_decode"
path = "fuzz_targets/percent_decode.rs"
test = false
doc = false

[[bin]]
name = "path_components"
path = "fuzz_targets/path_components.rs"
test = false
doc = false

[[bin]]
name = "url_parse"
path = "fuzz_targets/url_parse.rs"
test = false
doc = false

[[bin]]
name = "range_header"
path = "fuzz_targets/range_header.rs"
test = false
doc = false

[[bin]]
name = "if_none_match"
path = "fuzz_targets/if_none_match.rs"
test = false
doc = false

[[bin]]
name = "platform_component"
path = "fuzz_targets/platform_component.rs"
test = false
doc = false

[[bin]]
name = "validate_request_target"
path = "fuzz_targets/validate_request_target.rs"
test = false
doc = false

[[bin]]
name = "validate_method"
path = "fuzz_targets/validate_method.rs"
test = false
doc = false

[[bin]]
name = "fuzz_header_name"
path = "fuzz_targets/fuzz_header_name.rs"
test = false
doc = false

[[bin]]
name = "fuzz_header_value"
path = "fuzz_targets/fuzz_header_value.rs"
test = false
doc = false

[[bin]]
name = "fuzz_status_code"
path = "fuzz_targets/fuzz_status_code.rs"
test = false
doc = false

[[bin]]
name = "fuzz_normalize_response"
path = "fuzz_targets/fuzz_normalize_response.rs"
test = false
doc = false
