[package]
name = "eggserve-bin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI binary for eggserve"

[[bin]]
name = "eggserve"
path = "src/main.rs"

[dependencies]
eggserve-core = { path = "../eggserve-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
http-body-util = "0.1"
bytes = "1"
