[package]
name = "eggserve-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Security policy, path confinement, and static-serving primitives for eggserve"

[dependencies]
bytes = "1"
futures-util = "0.3"
http-body-util = "0.1"
httpdate = "1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
phf = { version = "0.11", features = ["macros"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "fs", "io-util", "sync"] }

[dev-dependencies]
tempfile = "3"
