[package]
name = "eggserve-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Security policy, path confinement, and static-serving primitives for eggserve"

[features]
default = []
client = ["hyper/client", "hyper-util/client-legacy"]
client-tls = ["client", "dep:rustls", "dep:tokio-rustls", "dep:webpki-roots"]
python-bindings-internal = []

[dependencies]
bytes = "1"
futures-util = "0.3"
http-body-util = "0.1"
httpdate = "1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
phf = { version = "0.11", features = ["macros"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "fs", "io-util", "sync"] }

# Client dependencies (feature-gated)
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", optional = true }
webpki-roots = { version = "0.26", optional = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
hyper = { version = "1", features = ["client"] }
libc = "0.2"
tempfile = "3"
