[package]
name = "eggserve-python"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python native bindings for eggserve hardened primitives"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
eggserve-core = { path = "../eggserve-core" }
pyo3 = { version = "0.24", features = ["extension-module"] }
