[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "eggserve"
version = "0.1.0"
description = "A hardened, Rust-backed static file server with native Python bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14,<3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Filesystems",
]

[project.urls]
Homepage = "https://github.com/eggstack/eggserve"
Repository = "https://github.com/eggstack/eggserve"
Documentation = "https://github.com/eggstack/eggserve/tree/main/docs"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "eggserve._native"
include = [
    { path = "python/eggserve/bin/eggserve", format = "wheel" },
    { path = "python/eggserve/bin/eggserve.exe", format = "wheel" },
]
exclude = ["python/**/__pycache__/**", "python/**/*.pyc"]
